--- a/Libi bday.html
+++ b/Libi bday.html
@@ -32,18 +32,18 @@ div.desc{
 </style>
 
 <body>
-    <h1>ליבי בת שנה בואו למסיבה</h1>
+    <h1>ליבי בת שנה בואו למסיבה "></h1>
     
 <div class="gallery">
-    <a target="_blank" href="../FullStack-main/libi.jpeg">
-      <img src="../FullStack-main/libi.jpeg" alt="Cinque Terre" width="600" height="400">
+    <a target="_blank" href="libi.jpeg">
+      <img src="libi.jpeg" alt="Cinque Terre" width="600" height="400">
     </a>
-    <a target="_blank" href="../FullStack-main/20230630_164959.jpg">
-      <img src="../FullStack-main/20230630_164959.jpg" alt="Forest" width="600" height="400">
+    <a target="_blank" href="20230630_164959.jpg">
+      <img src="20230703_152759.jpg" alt="Forest" width="600" height="400">
     </a>
 
-    <a target="_blank" href="../FullStack-main/20230711_172523.jpg">
-      <img src="../FullStack-main/20230711_172523.jpg" alt="Northern Lights" width="600" height="400">
+    <a target="_blank" href="20230711_172523.jpg">
+      <img src="20230711_172523.jpg" alt="Northern Lights" width="600" height="400">
     </a>
    
   </div>
@@ -58,7 +58,7 @@ div.desc{
 
 </div>
 
-<a href="https://goo.gl/maps/YA26GX885oYLjcia7"><img src="../FullStack-main/unnamed.png" style="padding-left: 35%;width: 300px;"
+<a href="https://goo.gl/maps/YA26GX885oYLjcia7"><img src="unnamed.png" style="padding-left: 35%;width: 300px;"
     ></a>
 <h2>מה להביא
     <ol>
