--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ div.desc{
 </style>
 
 <body>
-    <h1>ליבי בת שנה בואו למסיבה "></h1>
+    <h1>ליבי בת שנה בואו למסיבה </h1>
     
 <div class="gallery">
     <a target="_blank" href="libi.jpeg">
